@@ -62,6 +62,7 @@ module RDoc
     "rb_mDL"               => "DL",
     "rb_mEnumerable"       => "Enumerable",
     "rb_mErrno"            => "Errno",
+    "rb_mFConst"           => "File::Constants",
     "rb_mFileTest"         => "FileTest",
     "rb_mGC"               => "GC",
     "rb_mKernel"           => "Kernel",
